Retro68/TODO
SX2@makoto 23:06:42/240130(..wip/Retro68)%  make |& tee /tmp/log                                                               
=> Bootstrap dependency digest>=20211023: found digest-20220214
===> Skipping vulnerability checks.
WARNING: No /usr/pkg/pkgdb/pkg-vulnerabilities file found.
WARNING: To fix run: `/usr/pkg/sbin/pkg_admin -K /usr/pkg/pkgdb fetch-pkg-vulnerabilities'.
===> Building for Retro68-2019.8.2
[  2%] Built target LaunchAPPLCommon
[  3%] Building CXX object PEFTools/CMakeFiles/MakePEF.dir/MakePEF.cc.o
[  6%] Built target ResourceFiles
[  7%] Building CXX object LaunchAPPL/Common/CMakeFiles/TestLaunchAPPLCommon.dir/Test.cc.o
[  8%] Building CXX object PEFTools/CMakeFiles/MakeImport.dir/MakeImport.cc.o
[  8%] Building CXX object ConvertObj/CMakeFiles/ConvertObj.dir/ConvertObj.cc.o
[  8%] Building CXX object ResourceFiles/CMakeFiles/ResInfo.dir/ResInfo.cc.o
[  9%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/LaunchAPPL.cc.o
[ 83%] Built target ELF
[ 83%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/MakeExecutable.cc.o
[ 84%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/LaunchMethod.cc.o
In file included from /tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/../gcc/newlib/libc/include/sys/config.h:5,
                 from /tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/../gcc/newlib/libc/include/_ansi.h:11,
                 from /tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/../gcc/newlib/libc/include/alloca.h:10,
                 from /tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/MakePEF.cc:9:
/tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/../gcc/newlib/libc/include/sys/features.h:28:10: fatal error: _newlib_version.h: No such file or directory
   28 | #include <_newlib_version.h>
      |          ^~~~~~~~~~~~~~~~~~~
compilation terminated.
gmake[2]: *** [PEFTools/CMakeFiles/MakePEF.dir/build.make:76: PEFTools/CMakeFiles/MakePEF.dir/MakePEF.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:349: PEFTools/CMakeFiles/MakePEF.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 85%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Launcher.cc.o
In file included from /tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/MakeImport.cc:19:
/tmp/wip/Retro68/work/Retro68-2019.8.2/PEFTools/PEF.h:44:10: fatal error: PEFBinaryFormat.h: No such file or directory
   44 | #include "PEFBinaryFormat.h"
      |          ^~~~~~~~~~~~~~~~~~~
compilation terminated.
gmake[2]: *** [PEFTools/CMakeFiles/MakeImport.dir/build.make:76: PEFTools/CMakeFiles/MakeImport.dir/MakeImport.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:375: PEFTools/CMakeFiles/MakeImport.dir/all] Error 2
[ 85%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Utilities.cc.o
[ 86%] Linking CXX executable TestLaunchAPPLCommon
[ 86%] Built target TestLaunchAPPLCommon
[ 87%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Executor.cc.o
[ 87%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/MiniVMac.cc.o
[ 88%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/SSH.cc.o
[ 89%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/StreamBasedLauncher.cc.o
[ 90%] Linking CXX executable ConvertObj
[ 90%] Built target ConvertObj
[ 90%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Serial.cc.o
[ 91%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/TCP.cc.o
[ 92%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/SharedFile.cc.o
[ 93%] Linking CXX executable ResInfo
[ 93%] Built target ResInfo
/tmp/wip/Retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc: In member function 'virtual void SharedFileStream::write(const void*, size_t)':
/tmp/wip/Retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:51:13: error: 'ofstream' is not a member of 'fs'; did you mean 'std::ofstream'?
   51 |         fs::ofstream out(shared_directory / "in_channel_1", std::ios::binary);
      |             ^~~~~~~~
.... more lines
